--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "@nomicfoundation/hardhat-toolbox": "^4.0.0",
         "@nomicfoundation/hardhat-verify": "^2.0.0",
         "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+        "@perimetersec/fuzzlib": "0.3.0",
         "@typechain/ethers-v6": "^0.5.0",
         "@typechain/hardhat": "^9.0.0",
         "@types/chai": "^4.2.0",
